--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "firebase": "^12.6.0",
     "next": "16.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
