--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "firebase": "^12.6.0",
-    "next": "16.0.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
