--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.7.2",
     "firebase": "^12.6.0",
     "next": "^16.0.8",
